form alignment fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -576,6 +576,7 @@ a:focus-visible {
   font-size: 20px;
   line-height: 24px;
   margin-bottom: 32px;
+  padding: 0;
 }
 
 .catalog-filter__item:not(:last-child) {
@@ -1402,7 +1403,7 @@ a:focus-visible {
 }
 
 .catalog-filter__group:nth-child(1) {
-  margin-right: 66px;
+  margin-right: 70px;
 }
 
 .catalog-filter__group:nth-child(3) {
